--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="Lab4NelsonEscalante"
             android:theme="@style/Theme.Laboratorio4">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
